--- a/TD4/TD4.ipynb
+++ b/TD4/TD4.ipynb
@@ -120,7 +120,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = combine(groupby(data, :Species), :Weight => mean => :Weight, :Weight => length => :n)"
+   ]
   },
   {
    "cell_type": "markdown",
